nib-java-demo-apps/deployment/k8s/tn3270-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tn3270-gw
  namespace: supernaut-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tn3270-gw
  template:
    metadata:
      labels:
        app: tn3270-gw
    spec:
      containers:
        - name: tn3270-gw
          image: nib/tn3270
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3270
          volumeMounts:
            - name: config-volume
              mountPath: /config
      volumes:
        - name: config-volume
          configMap:
            name: supernaut-config
