nib-java-demo-apps/deployment/k8s/supernaut-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: supernaut
  namespace: supernaut-demo
  labels:
    app: supernaut
spec:
  selector:
    app: supernaut
  ports:
    - protocol: TCP
      port: 8880
      targetPort: 8080
  type: ClusterIP
