nib-java-demo-apps/deployment/k8s/tn3270-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tn3270-gw
  namespace: supernaut-demo
spec:
  type: LoadBalancer
  selector:
    app: tn3270-gw
  ports:
    - name: tn3270-gw
      protocol: TCP
      port: 3270
      targetPort: 3270
