nib-java-demo-apps/deployment/k8s/motorhead-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: motorhead-ingress
  namespace: motorhead-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: motorhead.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: motorhead
                port:
                  number: 8881
