nib-java-demo-apps/deployment/k8s/supernaut-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: supernaut-ingress
  namespace: supernaut-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: supernaut.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: supernaut
                port:
                  number: 8880
